[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-lib"
version = "0.1.0"
description = "LLM-driven Python code optimization library"
authors = [{ name = "" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "litellm>=1.35.0",
  "numpy>=1.24.0",
  "streamlit>=1.31.0",
  "pandas>=2.1.0",
  "plotly>=5.18.0",
  "scikit-learn>=1.3.0",
  "networkx>=3.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["optimization_lib", "optimization_lib.*"]
